; ModuleID = '/home/carl/AnghaBench/radare2/libr/core/extr_windows_heap.c_cmd_debug_map_heap_win.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/core/extr_windows_heap.c_cmd_debug_map_heap_win.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@help_msg = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8*)* @cmd_debug_map_heap_win to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cmd_debug_map_heap_win(i32* %0, i8* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  store i32* %0, i32** %3, align 8
  store i8* %1, i8** %4, align 8
  %5 = call i32 (...) @init_func()
  %6 = load i8*, i8** %4, align 8
  %7 = getelementptr inbounds i8, i8* %6, i64 0
  %8 = load i8, i8* %7, align 1
  %9 = sext i8 %8 to i32
  switch i32 %9, label %19 [
    i32 63, label %10
    i32 98, label %14
  ]

10:                                               ; preds = %2
  %11 = load i32*, i32** %3, align 8
  %12 = load i32, i32* @help_msg, align 4
  %13 = call i32 @r_core_cmd_help(i32* %11, i32 %12)
  br label %25

14:                                               ; preds = %2
  %15 = load i32*, i32** %3, align 8
  %16 = load i8*, i8** %4, align 8
  %17 = getelementptr inbounds i8, i8* %16, i64 1
  %18 = call i32 @cmd_debug_map_heap_block_win(i32* %15, i8* %17)
  br label %25

19:                                               ; preds = %2
  %20 = load i32*, i32** %3, align 8
  %21 = load i8*, i8** %4, align 8
  %22 = getelementptr inbounds i8, i8* %21, i64 0
  %23 = load i8, i8* %22, align 1
  %24 = call i32 @w32_list_heaps(i32* %20, i8 signext %23)
  br label %25

25:                                               ; preds = %19, %14, %10
  ret i32 1
}

declare dso_local i32 @init_func(...) #1

declare dso_local i32 @r_core_cmd_help(i32*, i32) #1

declare dso_local i32 @cmd_debug_map_heap_block_win(i32*, i8*) #1

declare dso_local i32 @w32_list_heaps(i32*, i8 signext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
